# spawn

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  TODO.md  dist-workspace.toml  docker-compose.yaml  migrator.toml  mise.toml  spawn.toml
.github/: pull_request_template.md
.github/workflows/: license-scan.yaml  release.yaml  release.yml  test.yaml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
docs/src/components/: CLICommand.astro  cli-options.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/blog/: regression-tests.mdx
docs/src/content/docs/cli/: check.mdx  init.mdx  migration-adopt.mdx  migration-apply.mdx  migration-build.mdx  migration-new.mdx  migration-pin.mdx  migration-status.mdx  test-build.mdx  test-compare.mdx  test-expect.mdx  test-new.mdx  test-run.mdx
docs/src/content/docs/getting-started/: install.md  magic.mdx
docs/src/content/docs/guides/: local-development.md  manage-databases.md
docs/src/content/docs/recipes/: introduction.md  non-determinism-tests.md  test-macros.md  timestamps-in-tests.md
docs/src/content/docs/reference/: ci-cd.md  config.md  roadmap.md  templating.md
docs/src/content/docs/tutorial/: migration.md
migrations/: 001_first.sql
src/: cli.rs  config.rs  escape.rs  generate.rs  lib.rs  main.rs  migrator.rs  pinfile.rs  store.rs  telemetry.rs  template.rs  variables.rs
src/commands/: check.rs  init.rs  mod.rs
src/commands/migration/: adopt.rs  apply.rs  build.rs  mod.rs  new.rs  pin.rs  status.rs
src/commands/test/: build.rs  compare.rs  expect.rs  mod.rs  new.rs  run.rs
src/dbdriver/: mod.rs  postgres_psql.rs
src/engine/: mod.rs  postgres_psql.rs
src/sql_formatter/: mod.rs  postgres.rs
src/sqltest/: mod.rs
src/store/: mod.rs  pin.rs  pin_spawn.rs
src/store/pinner/: latest.rs  mod.rs  spawn.rs
static/: example.json  example.toml  example.yaml
static/engine-migrations/postgres-psql/: spawn.toml
static/engine-migrations/postgres-psql/migrations/001-base-migration-table/: up.sql
static/example/: spawn.toml
static/example/components/: add_indexes.sql  create_users.sql
static/example/components/admin/: audit_log.sql
static/example/components/admin/permissions/: roles.sql
static/example/components/analytics/: user_activity.sql
static/example/components/analytics/reports/daily/: sales_summary.sql
static/example/components/functions/: string_utils.sql
static/example/components/tables/: orders.sql  products.sql
static/example/components/views/: user_orders.sql
static/example/migrations/20240907212659-initial/: script.sql  up.sql
static/example/templates/: 20240907212659-initial.sql
static/example/tests/20250607115200-example-test/: expected  test.sql
static/example/tests/20250607115201-example-test/: expected  test.sql
static/tests/build_and_pin_pdf/migrations/20240907212659-initial/: up.sql
static/tests/build_with_component/components/util/: add_func.sql
static/tests/build_with_component/migrations/20240907212659-initial/: up.sql
static/tests/build_with_read_file/components/: data.json  data.toml  data.yaml  users.json
static/tests/build_with_read_file/migrations/20240907212659-initial/: up.sql
static/tests/build_with_variables/: variables.json
static/tests/build_with_variables/migrations/20240907212659-initial/: up.sql
static/tests/test_cli_test/tests/20250113000000-simple-test/: expected  test.sql
static/tests/two_migrations/migrations/20240908123456-second/: up.sql
tests/: integration_postgres.rs  migration_apply.rs  migration_build.rs
wix/: main.wxs
