[package]
name = "spawn"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["color", "derive"] }
minijinja = { version = "2.11.0", features = ["loader"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.49", features = ["full"] }
chrono = "0.4.40"
config = { version = "0.15", features = ["toml"] }

twox-hash = { version = "2", features = ["xxhash3_64", "xxhash3_128"] }

anyhow = "1.0"

uuid = { version = "1.17", features = ["v4", "v5"] }

similar = { version = "2.7.0", features = ["inline"] }
console = "0.15"
object_store = { version = "0.12.3", features = ["fs"] }

async-trait = "0.1.88"
futures = "0.3"
opendal = { version = ">=0.53, <1", features = ["services-fs", "services-memory"] }
postgres-protocol = "0.6"

include_dir = "0.7.4"
thiserror = "2.0.17"
pin-project = "1.1.10"

posthog-rs = "0.3.7"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1"
