[package]
name = "spawn-db"
version = "0.1.10"
edition = "2021"
repository = "https://github.com/saward/spawn"
authors = ["Mark Saward <mark@manse.cloud>"]
description = "Database Build System"
homepage = "https://spawn.dev"
license = "AGPL-3.0-only"

[package.metadata.wix]
upgrade-guid = "EDDD3448-8691-47B5-B21C-BBB6BD3FA1AE"
path-guid = "3CCE6052-6295-4118-B5C8-79E2834AD8E2"
license-file = "LICENSE"
eula = false
license = false

[package.metadata.dist]
bins = ["spawn"]

[[bin]]
name = "spawn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["color", "derive"] }
minijinja = { version = "2.11.0", features = ["loader"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.49", features = ["full"] }
chrono = "0.4.40"
config = { version = "0.15", features = ["toml"] }

twox-hash = { version = "2", features = ["xxhash3_64", "xxhash3_128"] }

anyhow = "1.0"

uuid = { version = "1.17", features = ["v4", "v5"] }

similar = { version = "2.7.0", features = ["inline"] }
console = "0.15"
object_store = { version = "0.12.3", features = ["fs"] }

async-trait = "0.1.88"
futures = "0.3"
opendal = { version = ">=0.53, <1", features = ["services-fs", "services-memory"] }
postgres-protocol = "0.6"

include_dir = "0.7.4"
thiserror = "2.0.17"
pin-project = "1.1.10"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
shlex = "1.3.0"
tabled = { version = "0.17", features = ["ansi"] }
dialoguer = "0.11"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
